# pico-examples

./: CMakeLists.txt
blink/: blink.c
i2c/: CMakeLists.txt
i2c/mpu6050_i2c/: mpu6050.c  mpu6050.h  mpu6050_i2c.c
