if(NOT PICO_NO_HARDWARE)
    add_subdirectory(bmp280_i2c)
    add_subdirectory(bus_scan)
    add_subdirectory(lcd_1602_i2c)
    add_subdirectory(lis3dh_i2c)
    add_subdirectory(mcp9808_i2c)
    add_subdirectory(mma8451_i2c)
    add_subdirectory(mpl3115a2_i2c)
    add_subdirectory(mpu6050_i2c)
    pico_enable_stdio_usb(mpu6050_i2c 1)
    pico_enable_stdio_uart(mpu6050_i2c 0)
    add_subdirectory(oled_i2c)
    add_subdirectory(pa1010d_i2c)
    add_subdirectory(pcf8523_i2c)
endif()
